--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>content</h1>
         Some content.
+        <img src="https://octodex.github.com/images/vinyltocat.png">
     </body>
 </html>
