--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
         <h1>content</h1>
         Some content.
         <img src="https://octodex.github.com/images/vinyltocat.png">
+        <ul>
+            <li>hi</li>
+            <li>my name is</li>
+            <li>eunsung</li>
+        </ul>
     </body>
 </html>
