--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li>hi</li>
             <li>my name is</li>
             <li>eunsung</li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
         </ul>
     </body>
 </html>
