--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
     <head>
         <title>I am a title!</title>
     </head>
-
+ 
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
     <body>
         <h1>content</h1>
         Some content.
